--- a/vercel.json
+++ b/vercel.json
@@ -2,65 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
-            "use": "@now/node",
-            "config": {
-                "maxLambdaSize": "10mb"
-            },
-            "routes": [
-                {
-                    "src": "/(.*)",
-                    "dest": "/index.js"
-                }
-            ]
+            "src": "./index.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/routes/todo.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ],
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-                "Access-Control-Allow-Headers": "Content-Type"
-            },
-            "continue": true
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ],
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-                "Access-Control-Allow-Headers": "Content-Type"
-            }
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/routes/auth.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE"
-            ],
-            "headers": {
-                "Access-Control-Allow-Origin": "*",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-                "Access-Control-Allow-Headers": "Content-Type"
-            }
+            "dest": "/"
         }
     ]
 }
